chore: Update Readme.md

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,9 @@
     "canonicalize",
     "certbot",
     "chrono",
+    "Clippy",
     "cockroachdb",
+    "codecov",
     "consts",
     "cpus",
     "crond",
@@ -37,6 +39,7 @@
     "keygen",
     "letsencrypt",
     "libc",
+    "Mamaicode",
     "mangen",
     "metrs",
     "Metrsd",
@@ -48,6 +51,7 @@
     "ndaemon",
     "ndns",
     "newgrp",
+    "nexthat",
     "nmetrics",
     "nographic",
     "nproxy",
@@ -60,6 +64,7 @@
     "schemars",
     "sockaddr",
     "statefile",
+    "Statefiles",
     "unexpose",
     "uninit",
     "unistd",
