--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nanocl"
-version = "0.13.1"
+version = "0.14.0"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
 description = "The Self-Sufficient Orchestrator CLI"
@@ -31,10 +31,11 @@ chrono = { version = "0.4", default-features = false, features = [
   "std",
   "clock",
 ] }
-bollard-next = { version = "0.15.4" }
-nanocl_utils = { version = "0.4", features = ["build_tools"] }
-nanocld_client = { version = "0.13" }
+bollard-next = { version = "0.15.7" }
+nanocl_utils = { version = "0.5", features = ["build_tools"] }
+nanocld_client = { version = "0.14" }
 serde_json = "1.0"
+nanocl_error = { version = "0.3", features = ["io", "serde_json"] }
 
 [dependencies]
 bollard-next = { version = "0.15.4" }
@@ -56,8 +57,8 @@ dialoguer = "0.11"
 termios = "0.3"
 liquid = { version = "0.26", features = ["stdlib"] }
 regex = "1.10"
-nanocld_client = { version = "0.13", features = ["tokio", "openssl"] }
-nanocl_error = { version = "0.2", features = [
+nanocld_client = { version = "0.14", features = ["tokio", "openssl"] }
+nanocl_error = { version = "0.3", features = [
   "io",
   "tokio",
   "http_client",
@@ -65,7 +66,7 @@ nanocl_error = { version = "0.2", features = [
   "bollard",
   "serde_yaml",
 ] }
-nanocl_utils = { version = "0.4", features = ["unix"] }
+nanocl_utils = { version = "0.5", features = ["unix"] }
 ctrlc = "3.3"
 toml = "0.8"
 ring = "0.17"
