fix/ncproxy: ssl terminaison stream

--- a/bin/ncproxy/src/models/templates/stream.conf
+++ b/bin/ncproxy/src/models/templates/stream.conf
@@ -6,13 +6,13 @@ server {
   {% endif %}
   proxy_pass              {{ upstream_key }};
   {% if ssl %}
-  ssl_certificate         {ssl.Certificate};
-  ssl_certificate_key     {ssl.CertificateKey};
+  ssl_certificate         {{ ssl.Certificate }};
+  ssl_certificate_key     {{ ssl.CertificateKey }};
   {% if ssl.Dhparam %}
-  ssl_dhparam             {ssl.Dhparam};
+  ssl_dhparam             {{ ssl.Dhparam }};
   {% endif %}
   {% if ssl.CertificateClient %}
-  ssl_client_certificate  {ssl.CertificateClient};
+  ssl_client_certificate  {{ ssl.CertificateClient }};
   {% endif %}
   {% if ssl.VerifyClient %}
   ssl_verify_client       on;
