fix/nproxy: ubuntu version

--- a/bin/nproxy/Dockerfile
+++ b/bin/nproxy/Dockerfile
@@ -1,9 +1,9 @@
-FROM ubuntu:noble-20240212
+FROM ubuntu:23.10
 
 USER root
 
 RUN apt-get update && \
-  apt-get install -y nginx nginx-extras \
+  apt-get install -y nginx nginx-common nginx-extras \
   && rm -rf /var/lib/apt/lists/* \
   && rm -rf /tmp/* \
   && rm -rf /var/log/* \
