--- a/examples/include.yml
+++ b/examples/include.yml
@@ -1,7 +1,15 @@
 ApiVersion: v0.14
 
-SubStates:
-  - ./sub_state.yml
+# SubStates:
+#   - ./sub_state.yml
+
+Jobs:
+- Name: include-example
+  Containers:
+  - Image: ubuntu:latest
+    Cmd:
+    - echo
+    - "Hello, World!"
 
 Jobs:
 - Name: include-example
