--- a/examples/sub_state.yml
+++ b/examples/sub_state.yml
@@ -1,8 +1,17 @@
 ApiVersion: v0.14
 
-# See all options:
-# https://docs.next-hat.com/references/nanocl/objects/cargo
+SubStates:
+- ./sub_child.yml
+
+Jobs:
+- Name: include-example
+  Containers:
+  - Image: ubuntu:latest
+    Cmd:
+    - echo
+    - "Hello, World!"
+
 Cargoes:
-- Name: include-sub-example
+- Name: include-example
   Container:
     Image: ghcr.io/next-hat/nanocl-get-started:latest
