--- a/examples/sub_child.yml
+++ b/examples/sub_child.yml
@@ -3,6 +3,6 @@ ApiVersion: v0.14
 # See all options:
 # https://docs.next-hat.com/references/nanocl/objects/cargo
 Cargoes:
-- Name: sub-example
+- Name: sub-child-example
   Container:
     Image: ghcr.io/next-hat/nanocl-get-started:latest
