--- a/examples/sub_state.yml
+++ b/examples/sub_state.yml
@@ -3,21 +3,22 @@ ApiVersion: v0.14
 Args:
 - Name: name
   Kind: String
+- Name: port
+  Kind: Number
+- Name: enable_job
+  Kind: Boolean
 
 SubStates:
 - Path: ./sub_child.yml
   Args:
   - Name: name
     Value: ${{ Args.name }} # Pass the value of Args.name to the sub-state
+  - Name: port
+    Value: ${{ Args.port }} # Pass the value of Args.port to the sub-state
+  - Name: enable_job
+    Value: ${{ Args.enable_job }} # Pass the value of Args.ssl_enabled to the sub-state
 - https://nhnr.io/v0.14/tests/sub_state.yml
 
-Jobs:
-- Name: ${{ Args.name }}-sub-example
-  Containers:
-  - Image: ubuntu:latest
-    Cmd:
-    - echo
-    - "Hello, World!"
 
 Cargoes:
 - Name: ${{ Args.name }}-sub-example
