--- a/bin/ncproxy/src/models/templates/stream.conf
+++ b/bin/ncproxy/src/models/templates/stream.conf
@@ -1,13 +1,18 @@
 server {
   {% if udp %}
-  listen                  {{ listen }} udp;
+  listen                  {{ listen }} udp{% if ssl %} ssl{% endif %};
   {% else %}
-  listen                  {{ listen }};
+  listen                  {{ listen }}{% if ssl %} ssl{% endif %};
   {% endif %}
   proxy_pass              {{ upstream_key }};
   {% if ssl %}
   ssl_certificate         {{ ssl.Certificate }};
   ssl_certificate_key     {{ ssl.CertificateKey }};
+  ssl_protocols         SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers           HIGH:!aNULL:!MD5;
+  ssl_session_cache     shared:SSL:20m;
+  ssl_session_timeout   4h;
+  ssl_handshake_timeout 30s;
   {% if ssl.Dhparam %}
   ssl_dhparam             {{ ssl.Dhparam }};
   {% endif %}
