--- a/examples/db_replication.yml
+++ b/examples/db_replication.yml
@@ -1,2 +1,39 @@
 ApiVersion: v0.14
 
+Args:
+- Name: init
+  Kind: Boolean
+
+# {% if Args.init %}
+Jobs:
+- Name: init-db-cluster
+  Containers:
+  - Image: cockroachdb/cockroach:v23.1.15
+    HostConfig:
+      NetworkMode: global
+    Entrypoint:
+    - /bin/sh
+    Cmd:
+    - -c
+    - |
+      cockroach init --insecure --host=store.local:26257
+# {% endif %}
+
+# {% if Args.init == false %}
+Cargoes:
+- Name: db-replication
+  Replication:
+    Mode: Static
+    Number: 3
+  Container:
+    Hostname: store.local
+    Image: cockroachdb/cockroach:v23.1.15
+    Entrypoint:
+    - /bin/sh
+    Tty: true
+    Cmd:
+    - -c
+    - |
+      echo "starting cockroachdb"
+      cockroach start --join=store.local,1store.local,2store.local --listen-addr=:26257 --sql-addr=:26258 --insecure
+# {% endif %}
