fix/ncproxy: set upstream target path

--- a/bin/ncproxy/src/models/templates/http.conf
+++ b/bin/ncproxy/src/models/templates/http.conf
@@ -27,7 +27,7 @@ server {
     proxy_set_header {{ header }};
     {% endfor %}{% endif %}{% if location.version %}proxy_http_version {{ location.version }};
     {% endif %}{% if location.redirect %}
-    return {{ location.redirect }} {{ location.upstream_key }};{% else %}
+    return {{ location.redirect }} {{ location.upstream_key }}{{ location.upstream_path }};{% else %}
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-Scheme $scheme;
     proxy_set_header X-Forwarded-Proto  $scheme;
