fix/ncproxy: set upstream target path

--- a/bin/ncproxy/src/models/templates/http.conf
+++ b/bin/ncproxy/src/models/templates/http.conf
@@ -27,13 +27,13 @@ server {
     proxy_set_header {{ header }};
     {% endfor %}{% endif %}{% if location.version %}proxy_http_version {{ location.version }};
     {% endif %}{% if location.redirect %}
-    return {{ location.redirect }} {{ location.upstream_key }}{{ location.upstream_path }};{% else %}
+    return {{ location.redirect }} {{ location.upstream_key }};{% else %}
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-Scheme $scheme;
     proxy_set_header X-Forwarded-Proto  $scheme;
     proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
     proxy_set_header X-Real-IP          $remote_addr;
-    proxy_pass {{ location.upstream_key }}/;
+    proxy_pass {{ location.upstream_key }}{{ location.upstream_path }};
     {% endif %}{% if location.allowed_ips %}{% for allowed_ip in location.allowed_ips %}
     allow {{ allowed_ip }};
     {% endfor %}deny all;{% endif %}
