--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,10 @@
   "rust-analyzer.cargo.features": ["dev", "test"],
   "cSpell.words": [
     "aarch",
+    "blkio",
     "canonicalize",
     "certbot",
+    "Cgroupns",
     "chrono",
     "Clippy",
     "cockroachdb",
@@ -32,6 +34,7 @@
     "freeifaddrs",
     "gethostname",
     "getifaddrs",
+    "Healthcheck",
     "iface",
     "ifaddrs",
     "indicatif",
@@ -60,6 +63,8 @@
     "nstore",
     "ntex",
     "openapi",
+    "Pids",
+    "precpu",
     "proto",
     "qcow",
     "rustc",
@@ -67,6 +72,8 @@
     "sockaddr",
     "statefile",
     "Statefiles",
+    "Tmpfs",
+    "Ulimits",
     "unexpose",
     "uninit",
     "unistd",
