--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -2,7 +2,16 @@
 
 name: Clippy
 
-on: [push, pull_request, workflow_dispatch]
+on:
+  push:
+    branches: ["nightly"]
+  pull_request:
+    branches: ["nightly"]
+  workflow_dispatch: {}
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/nightly' }}
 
 jobs:
   clippy:
