--- a/bin/ncproxy/src/models/templates/http.conf
+++ b/bin/ncproxy/src/models/templates/http.conf
@@ -1,3 +1,7 @@
+{% if limit_req_zone %}
+limit_req_zone $binary_remote_addr zone={{ key }}:{{ limit_req_zone.Size   }}m rate={{ limit_req_zone.Rate }}r/s;
+{% endif %}
+
 server {
   listen {{ listen }};
   {% if ssl %}
@@ -35,8 +39,8 @@ server {
     proxy_set_header X-Real-IP          $remote_addr;
     proxy_pass {{ location.upstream_key }}{{ location.upstream_path }};
     {% endif %}{% if location.allowed_ips %}{% for allowed_ip in location.allowed_ips %}
-    allow {{ allowed_ip }};
-    {% endfor %}deny all;{% endif %}
-  }
-  {% endfor %}{% endif %}
+    allow {{ allowed_ip }};{% endfor %}
+    deny all;{% endif %}{% if location.limit_req %}
+    limit_req zone={{ key }} burst={{ location.limit_req.Burst }} {% if location.limit_req.Delay %}delay={{ location.limit_req.Delay }}{% else %}nodelay{% endif %};{% endif %}
+  }{% endfor %}{% endif %}
 }
