feature/nanocld: better sql schema with indexes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
     "Cgroupns",
     "chrono",
     "Clippy",
+    "cloudimg",
     "cockroachdb",
     "codecov",
     "consts",
@@ -44,6 +45,7 @@
     "indicatif",
     "Insertable",
     "ipam",
+    "ipnet",
     "jsonschema",
     "keygen",
     "letsencrypt",
