--- a/bin/nanocld/.env
+++ b/bin/nanocld/.env
@@ -1,1 +1,3 @@
-DATABASE_URL=postgres://root:root@store.nanocl.internal:26258/defaultdb?sslmode=verify-full&sslcert=$HOME/.nanocl_dev/state/store/certs/client.root.crt&sslkey=$HOME/.nanocl_dev/state/store/certs/client.root.key&sslrootcert=$HOME/.nanocl_dev/state/store/certs/ca.crt
+DATABASE_URL=postgres://root:root@store.nanocl.internal:26258/defaultdb?
+
+#sslmode=verify-full&sslcert=$HOME/.nanocl_dev/state/store/certs/client.root.crt&sslkey=$HOME/.nanocl_dev/state/store/certs/client.root.key&sslrootcert=$HOME/.nanocl_dev/state/store/certs/ca.crt
