--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,9 @@
     "freeifaddrs",
     "gethostname",
     "getifaddrs",
+    "rowid",
+    "Inet",
+    "Timestamptz",
     "Healthcheck",
     "iface",
     "ifaddrs",
