feature/nanocld: better sql schema with indexes (#964)
* feature/nanocld: better sql schema with indexes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
     "Cgroupns",
     "chrono",
     "Clippy",
+    "cloudimg",
     "cockroachdb",
     "codecov",
     "consts",
@@ -38,12 +39,16 @@
     "freeifaddrs",
     "gethostname",
     "getifaddrs",
+    "rowid",
+    "Inet",
+    "Timestamptz",
     "Healthcheck",
     "iface",
     "ifaddrs",
     "indicatif",
     "Insertable",
     "ipam",
+    "ipnet",
     "jsonschema",
     "keygen",
     "letsencrypt",
