feature/nanocld: handle filter by dates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
     "cpus",
     "crond",
     "curr",
+    "datetime",
     "dialoguer",
     "dnsmasq",
     "Domainname",
@@ -39,13 +40,11 @@
     "freeifaddrs",
     "gethostname",
     "getifaddrs",
-    "rowid",
-    "Inet",
-    "Timestamptz",
     "Healthcheck",
     "iface",
     "ifaddrs",
     "indicatif",
+    "Inet",
     "Insertable",
     "ipam",
     "ipnet",
@@ -77,11 +76,13 @@
     "precpu",
     "proto",
     "qcow",
+    "rowid",
     "rustc",
     "schemars",
     "sockaddr",
     "statefile",
     "Statefiles",
+    "Timestamptz",
     "Tmpfs",
     "Ulimits",
     "unexpose",
