feature/nanocld: updated related cargo if secret change

--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -72,6 +72,7 @@ Cargoes:
         App: deploy-example
     Secrets:
       - env.deploy-example.com
+      - env.deploy-secret
     Container:
       Image: ghcr.io/next-hat/nanocl-get-started:latest
       Env:
