--- a/examples/secret_env.yml
+++ b/examples/secret_env.yml
@@ -1,8 +1,9 @@
 ApiVersion: v0.14
 
 Secrets:
-- Name: deploy-secret
+- Name: env.deploy-secret
   Kind: nanocl.io/env
   Data:
   - TOTO=TATA
+  - TEST=GG
   - GG=WP
