fix/nanocl: state diff trigger and prettier loaders

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
     "gethostname",
     "getifaddrs",
     "Healthcheck",
+    "identitytoken",
     "iface",
     "ifaddrs",
     "indicatif",
@@ -77,9 +78,11 @@
     "proto",
     "qcow",
     "recurr",
+    "registrytoken",
     "rowid",
     "rustc",
     "schemars",
+    "serveraddress",
     "sockaddr",
     "statefile",
     "Statefiles",
