--- a/examples/cargo_example.yml
+++ b/examples/cargo_example.yml
@@ -6,7 +6,8 @@ Namespace: cargo-example
 # https://docs.next-hat.com/references/nanocl/objects/cargo
 Cargoes:
 - Name: cargo-example
+  ImagePullPolicy: Always
   Metadata:
     Certbot: managed
   Container:
-    Image: ghcr.io/next-hat/nanocl-get-started:latest
+    Image: nginx:latest
