--- a/installer.yml
+++ b/installer.yml
@@ -10,7 +10,7 @@ Namespace: system
 Cargoes:
 - Name: nstore
   Container:
-    Image: cockroachdb/cockroach:v23.1.20
+    Image: cockroachdb/cockroach:v24.1.0
     Tty: true
     Hostname: store.nanocl.internal
     Entrypoint:
@@ -36,7 +36,11 @@ Cargoes:
 
 - Name: nmetrics
   Container:
+    # {% if channel == "nightly" %}
+    Image: ghcr.io/next-hat/metrsd:0.5.4-nightly
+    # {% else %}
     Image: ghcr.io/next-hat/metrsd:0.5.3
+    # {% endif %}
     Tty: true
     Cmd:
     - --hosts
@@ -109,7 +113,7 @@ Cargoes:
 - Name: ncdns
   Container:
     # {% if channel == "nightly" %}
-    Image: ghcr.io/next-hat/ncdns:0.6.1-nightly
+    Image: ghcr.io/next-hat/ncdns:0.7.0-nightly
     # {% else %}
     Image: ghcr.io/next-hat/ncdns:0.6.0
     # {% endif %}
