feature/ncproxy: proxy_ssl_certificate

--- a/bin/ncproxy/src/models/templates/http.conf
+++ b/bin/ncproxy/src/models/templates/http.conf
@@ -42,5 +42,9 @@ server {
     allow {{ allowed_ip }};{% endfor %}
     deny all;{% endif %}{% if location.limit_req %}
     limit_req zone={{ key }} burst={{ location.limit_req.Burst }} {% if location.limit_req.Delay %}delay={{ location.limit_req.Delay }}{% else %}nodelay{% endif %};{% endif %}
+    {% if location.ssl %}
+    proxy_ssl_certificate         {{location.ssl.Certificate}};
+    proxy_ssl_certificate_key     {{location.ssl.CertificateKey}};
+    {% endif  %}
   }{% endfor %}{% endif %}
 }
