--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -89,3 +89,4 @@ ntex-cors = "2"
 rand = "0.8"
 openssl = { version = "0.10" }
 ipnet = { version = "2.9.0", features = ["serde"] }
+num_cpus = "1.16.0"
