debug: tests workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,7 @@ jobs:
         run: curl -sO https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz
         shell: bash
       - name: Unzip ngrok
-        run: unzip ngrok-stable-linux-amd64.zip
+        run: unzip ngrok-v3-stable-linux-amd64.tgz
         shell: bash
       - name: Add ~/.ssh directory
         run: mkdir -p ~/.ssh
