chore: upgrade docker images

--- a/bin/nproxy/Dockerfile
+++ b/bin/nproxy/Dockerfile
@@ -1,13 +1,13 @@
-FROM ubuntu:23.10
+FROM ubuntu:24.10
 
 USER root
 
 RUN apt-get update && \
-  apt-get install -y nginx nginx-common nginx-extras \
-  && rm -rf /var/lib/apt/lists/* \
-  && rm -rf /tmp/* \
-  && rm -rf /var/log/* \
-  && rm -rf /var/tmp/*
+  apt-get install -y nginx nginx-common nginx-extras && \
+  rm -rf /var/lib/apt/lists/* && \
+  rm -rf /tmp/* && \
+  rm -rf /var/log/* && \
+  rm -rf /var/tmp/*
 
 EXPOSE 80/tcp 443/tcp
 
