--- a/bin/ncproxy/Dockerfile
+++ b/bin/ncproxy/Dockerfile
@@ -21,7 +21,7 @@ ARG channel=stable
 ## Build our nanocl daemon binary
 COPY --from=planner /app /app
 WORKDIR /app
-RUN export ARCH=$(uname -m) &&
+RUN export ARCH=$(uname -m) && \
   rustup target add $ARCH-unknown-linux-musl
 RUN apk add --update alpine-sdk musl-dev g++ make libpq-dev openssl-dev git perl build-base
 COPY ./bin/nanocld/migrations ./bin/nanocld/migrations
@@ -44,9 +44,9 @@ COPY ./bin/ncdns/src ./bin/ncdns/src
 COPY .git ./.git
 ENV NANOCL_CHANNEL=$channel
 ENV RUSTFLAGS="-C target-feature=+crt-static"
-RUN export ARCH=$(uname -m) &&
+RUN export ARCH=$(uname -m) && \
   cargo build --release --target=$ARCH-unknown-linux-musl --features vendored --features release --bin ncproxy
-RUN export ARCH=$(uname -m) &&
+RUN export ARCH=$(uname -m) && \
   cp /app/target/$ARCH-unknown-linux-musl/release/ncproxy /bin/ncproxy
 
 # stage 4 - create runtime image
