--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -15,7 +15,7 @@ env:
 jobs:
   release_image:
     runs-on: ubuntu-latest
-    container: 1.78.0-alpine3.20
+    container: rust:1.78.0-alpine3.20
 
     steps:
       # Install required dependencies
