--- a/bin/nanocld/Dockerfile
+++ b/bin/nanocld/Dockerfile
@@ -1,5 +1,5 @@
 # stage 1 - generate recipe file for dependencies
-FROM --platform=$BUILDPLATFORM rust:1.78.0-alpine3.19 as planner
+FROM --platform=$BUILDPLATFORM rust:1.78.0-alpine3.20 as planner
 
 WORKDIR /app
 COPY ./Cargo.toml ./Cargo.toml
@@ -15,14 +15,14 @@ COPY ./bin/ncvpnkit/Cargo.toml ./bin/ncvpnkit/Cargo.toml
 COPY ./bin/ncdns/Cargo.toml ./bin/ncdns/Cargo.toml
 
 # stage 2 - Build our project
-FROM --platform=$BUILDPLATFORM rust:1.78.0-alpine3.19 as builder
+FROM --platform=$BUILDPLATFORM rust:1.78.0-alpine3.20 as builder
 
 ARG channel=stable
 ## Build our nanocl daemon binary
 COPY --from=planner /app /app
 WORKDIR /app
-RUN export ARCH=$(uname -m) \
-  && rustup target add $ARCH-unknown-linux-musl
+RUN export ARCH=$(uname -m) && \
+  rustup target add $ARCH-unknown-linux-musl
 RUN apk add --update alpine-sdk musl-dev g++ make libpq-dev openssl-dev git perl build-base
 COPY ./bin/nanocld/migrations ./bin/nanocld/migrations
 COPY ./crates/nanocl_error/src ./crates/nanocl_error/src
@@ -48,7 +48,7 @@ RUN cargo build --release --features release --bin nanocld
 RUN cp /app/target/release/nanocld /bin/nanocld
 
 # stage 3 - Create runtime image
-FROM --platform=$BUILDPLATFORM alpine:3.19.0
+FROM --platform=$BUILDPLATFORM alpine:3.20.0
 
 ## Install dependencies
 RUN apk --update add libgcc \
@@ -58,11 +58,11 @@ RUN apk --update add libgcc \
   bash \
   curl \
   cloud-utils \
-  cdrkit \
-  && rm -rf /var/cache/apk/* \
-  && rm -rf /tmp/* \
-  && rm -rf /var/log/* \
-  && rm -rf /var/tmp/*
+  cdrkit && \
+  rm -rf /var/cache/apk/* && \
+  rm -rf /tmp/* && \
+  rm -rf /var/log/* && \
+  rm -rf /var/tmp/*
 
 ## Copy the binary
 COPY --from=builder /bin/nanocld /bin/nanocld
